fix(pro:tree): collapse icon style error (#1114)

--- a/packages/pro/tree/style/index.less
+++ b/packages/pro/tree/style/index.less
@@ -42,6 +42,7 @@
     .@{icon-prefix},
     .@{header-prefix}-content {
       height: @pro-tree-header-wrapper-height;
+      line-height: @pro-tree-header-wrapper-height;
     }
 
     & + .@{divider-prefix} {
